# controllers/admin/posts/publish/publish_contract.go
@@ -1,0 +1,17 @@
+package create
+
+import (
+	"gosimplecms/models"
+	"time"
+)
+
+func (ctl *PostPublishController) transformToResponse(post *models.Post) *models.CreateUpdatePostResponse {
+	return &models.CreateUpdatePostResponse{
+		ID:                   post.ID,
+		Title:                post.Title,
+		Status:               post.Status,
+		CreatedAt:            post.CreatedAt.Format(time.RFC3339),
+		UpdatedAt:            post.UpdatedAt.Format(time.RFC3339),
+		CurrentVersionNumber: post.CurrentVersionNumber,
+	}
+}
